--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ notifications:
   email: false
 language: node_js
 node_js:
-  - node
-
+  - "stable"
+cache:
+  directories:
+    - node_modules
 before_script:
-  - npm install
 script:
-  - npm run build
+  - npm start
