--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@
 notifications:
   email: false
 language: node_js
+
+os:
+  - linux
+  - osx
+  - windows
 node_js:
   - "stable"
 cache:
@@ -9,4 +14,4 @@ cache:
     - node_modules
 before_script:
 script:
-  - npm start
+  - npm compile
