--- a/package.json
+++ b/package.json
@@ -4,35 +4,7 @@
   "description": "A unicode picker",
   "main": "main.js",
   "scripts": {
-    "start": "npm install && electron ."
-  },
-  "build": {
-    "appId": "yourappid",
-    "category": "your.app.category.type",
-    "dmg": {
-      "contents": [
-        {
-          "x": 110,
-          "y": 150
-        },
-        {
-          "x": 240,
-          "y": 150,
-          "type": "link",
-          "path": "/Applications"
-        }
-      ]
-    },
-    "linux": {
-      "target": [
-        "AppImage",
-        "deb"
-      ]
-    },
-    "win": {
-      "target": "squirrel",
-      "icon": "build/icon.ico"
-    }
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
