--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A unicode picker",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "release" : "electron-builder ."
   },
   "repository": {
     "type": "git",
@@ -24,8 +25,7 @@
   "homepage": "https://github.com/ParadiseLab/UnicodePicker#readme",
   "devDependencies": {
     "electron": "latest",
-    "electron-builder": "latest",
-    "electron-packager": "latest"
+    "electron-builder": "latest"
   },
   "dependencies": {
     "unicode-range-json": "latest"
