--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "release" : "electron-builder ."
+    "test": "echo success",
+    "release" : "electron-builder"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,31 @@
   ],
   "author": "Brian SINQUIN",
   "license": "MIT",
+  "build": {
+    "appId": "{paradiselab.unicodepicker}",
+    "publish": "github",
+    "dmg": {
+      "contents": [
+        {
+          "x": 110,
+          "y": 150
+        },
+        {
+          "x": 240,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    },
+    "appImage": {
+      "license": "MIT"
+    },
+    "nsis": {
+      "createDesktopShortcut": "always",
+      "license": "MIT"
+    }
+  },
   "bugs": {
     "url": "https://github.com/ParadiseLab/UnicodePicker/issues"
   },
