better build ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -60,14 +60,10 @@ deploy:
   script: bash deploy.travis.sh
   skip_cleanup: true
   on:
-    branch: prod
+    branch: master
     
 before_cache:
   - rm -rf $HOME/.cache/electron-builder/wine
 
 # only run this script on pull requests and merges into 
 # the 'master' and 'prod' branches
-branches:
-  only:
-  - master
-  - prod
