--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,8 @@ deploy:
   script: bash deploy.travis.sh
   skip_cleanup: true
   on:
-    branch: master
+      tags: true
+      all_branches: true
     
 before_cache:
   - rm -rf $HOME/.cache/electron-builder/wine
