--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
-notifications:
-  email: false
 language: node_js
 
 node_js:
   - "stable"
-matrix:
+jobs:
   include:
     - os: osx
       osx_image: xcode10.2
@@ -16,7 +14,6 @@ matrix:
 
     - os: linux
       dist: trusty
-      sudo: required
       services: docker
       language: generic
 
@@ -58,7 +55,7 @@ script:
 deploy:
   provider: script
   script: bash deploy.travis.sh
-  skip_cleanup: true
+  cleanup: true
   on:
       tags: true
       all_branches: true
